--- a/static/index.html
+++ b/static/index.html
@@ -40,11 +40,16 @@
                     animation: {
                         'bounce-slow': 'bounce 3s infinite',
                         'wobble': 'wobble 1s ease-in-out infinite',
+                        'float': 'float 3s ease-in-out infinite',
                     },
                     keyframes: {
                         wobble: {
                             '0%, 100%': { transform: 'rotate(-3deg)' },
                             '50%': { transform: 'rotate(3deg)' },
+                        },
+                        float: {
+                            '0%, 100%': { transform: 'translateY(0px)' },
+                            '50%': { transform: 'translateY(-10px)' },
                         }
                     }
                 }
@@ -153,6 +158,33 @@
         </button>
     </div>
 
+    <!-- HISTORY MODAL -->
+    <div id="history-modal" class="hidden fixed inset-0 bg-black/70 z-50 flex items-center justify-center p-4">
+        <div
+            class="bg-popBg border-4 border-darkInk rounded-3xl shadow-comic-lg w-full max-w-md max-h-[80vh] overflow-hidden flex flex-col">
+            <!-- Header -->
+            <div class="bg-popPurple p-4 border-b-4 border-darkInk flex justify-between items-center">
+                <h2 class="font-title text-2xl text-white">🔮 KART GEÇMİŞİ</h2>
+                <button onclick="closeHistory()"
+                    class="text-white text-2xl font-bold hover:scale-110 transition">✕</button>
+            </div>
+
+            <!-- Card List -->
+            <div id="history-list" class="flex-1 overflow-y-auto p-4 space-y-3">
+                <!-- Cards will be inserted here -->
+                <p class="text-center text-gray-500 font-body">Henüz kart çekmedin!</p>
+            </div>
+
+            <!-- Footer -->
+            <div class="p-4 border-t-4 border-darkInk bg-white">
+                <button onclick="clearHistory()"
+                    class="w-full bg-popRed border-4 border-darkInk text-white py-2 rounded-xl font-title shadow-comic hover:shadow-comic-hover hover:translate-x-[2px] hover:translate-y-[2px] transition-all">
+                    GEÇMİŞİ TEMİZLE
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- SAYFA 2: FAL SONUCU -->
     <div id="tarot-page" class="hidden w-full max-w-md flex-col items-center justify-center h-full relative z-20">
 
@@ -183,7 +215,7 @@
                 <div id="result-card" class="hidden w-full flex-col items-center">
                     <!-- Paylaşılacak Kart Alanı -->
                     <div id="capture-area"
-                        class="cartoon-card w-full p-6 rounded-3xl shadow-comic-lg relative text-center bg-white">
+                        class="cartoon-card w-full p-6 rounded-3xl shadow-comic-lg relative text-center bg-white animate-float">
 
                         <!-- Süslemeler -->
                         <div class="absolute top-4 left-4 w-3 h-3 rounded-full bg-darkInk opacity-20"></div>
@@ -236,6 +268,19 @@
                             PAYLAŞ
                         </button>
                     </div>
+
+                    <!-- Crystal Jar - Card History (inside result-card, only visible when revealed) -->
+                    <div onclick="openHistory()"
+                        class="mt-6 cursor-pointer transform transition hover:scale-110 hover:rotate-6 active:scale-95 group hide-on-shot">
+                        <div
+                            class="relative bg-popPurple border-4 border-darkInk rounded-2xl p-3 shadow-comic inline-flex items-center gap-2">
+                            <img src="/cards/crystal-ball.png" class="w-10 h-10 object-contain" alt="Crystal Ball">
+                            <span class="font-title text-white text-sm">GEÇMİŞ</span>
+                            <div id="history-count"
+                                class="absolute -top-2 -right-2 bg-popYellow text-darkInk text-xs font-bold w-6 h-6 rounded-full flex items-center justify-center border-2 border-darkInk shadow-comic hidden">
+                                0</div>
+                        </div>
+                    </div>
                 </div>
     </div>
 
@@ -253,6 +298,7 @@
 
         window.onload = () => {
             checkCooldown();
+            updateHistoryBadge();
         };
 
         function checkCooldown() {
@@ -343,8 +389,8 @@
             document.getElementById('face-down-card').style.display = 'flex';
             document.getElementById('result-card').style.display = 'none';
 
-            // 4. Fetch Fortune
-            fetchFortune(randomCard.name);
+            // 4. Fetch Fortune (pass card file for history)
+            fetchFortune(randomCard.name, randomCard.file);
         }
 
         function revealCard() {
@@ -393,7 +439,7 @@
             location.reload();
         }
 
-        async function fetchFortune(cardName) {
+        async function fetchFortune(cardName, cardFile) {
             try {
                 const response = await fetch('/api/tarot-fortune', {
                     method: 'POST',
@@ -402,6 +448,9 @@
                 });
                 const data = await response.json();
                 document.getElementById('fortune-text').innerText = data.fortune_text;
+
+                // Save to history
+                saveToHistory(cardName, cardFile, data.fortune_text);
             } catch (e) {
                 console.error(e);
                 document.getElementById('fortune-text').innerText = "Evrenin mesajı alınamadı.";
@@ -417,6 +466,84 @@
         function goHome() {
             document.getElementById('tarot-page').style.display = 'none';
             document.getElementById('landing-page').style.display = 'flex';
+        }
+
+        // --- CARD HISTORY FUNCTIONS ---
+        const HISTORY_KEY = 'fortuny_card_history';
+        const MAX_HISTORY = 30;
+
+        function saveToHistory(cardName, cardFile, fortune) {
+            const history = getHistory();
+            history.unshift({
+                cardName: cardName,
+                cardFile: cardFile,
+                fortune: fortune,
+                date: new Date().toISOString()
+            });
+            // Keep only last MAX_HISTORY items
+            if (history.length > MAX_HISTORY) history.pop();
+            localStorage.setItem(HISTORY_KEY, JSON.stringify(history));
+            updateHistoryBadge();
+        }
+
+        function getHistory() {
+            const stored = localStorage.getItem(HISTORY_KEY);
+            return stored ? JSON.parse(stored) : [];
+        }
+
+        function openHistory() {
+            renderHistoryList();
+            document.getElementById('history-modal').classList.remove('hidden');
+        }
+
+        function closeHistory() {
+            document.getElementById('history-modal').classList.add('hidden');
+        }
+
+        function clearHistory() {
+            if (confirm('Tüm kart geçmişini silmek istediğine emin misin?')) {
+                localStorage.removeItem(HISTORY_KEY);
+                renderHistoryList();
+                updateHistoryBadge();
+            }
+        }
+
+        function renderHistoryList() {
+            const history = getHistory();
+            const listEl = document.getElementById('history-list');
+
+            if (history.length === 0) {
+                listEl.innerHTML = '<p class="text-center text-gray-500 font-body py-8">Henüz kart çekmedin!</p>';
+                return;
+            }
+
+            listEl.innerHTML = history.map(item => {
+                const date = new Date(item.date);
+                const dateStr = date.toLocaleDateString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric' });
+                const timeStr = date.toLocaleTimeString('tr-TR', { hour: '2-digit', minute: '2-digit' });
+
+                return `
+                    <div class="bg-white border-4 border-darkInk rounded-xl p-3 shadow-comic flex gap-3 items-start hover:scale-[1.02] transition cursor-pointer">
+                        <img src="/cards/${item.cardFile}" class="w-16 h-24 object-cover rounded-lg border-2 border-darkInk">
+                        <div class="flex-1 min-w-0">
+                            <h3 class="font-title text-popPurple text-lg">${item.cardName}</h3>
+                            <p class="text-xs text-gray-600 font-body line-clamp-2">"${item.fortune}"</p>
+                            <p class="text-[10px] text-gray-400 mt-1">${dateStr} - ${timeStr}</p>
+                        </div>
+                    </div>
+                `;
+            }).join('');
+        }
+
+        function updateHistoryBadge() {
+            const history = getHistory();
+            const badge = document.getElementById('history-count');
+            if (history.length > 0) {
+                badge.innerText = history.length;
+                badge.classList.remove('hidden');
+            } else {
+                badge.classList.add('hidden');
+            }
         }
     </script>
 </body>
